--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -1,7 +1,6 @@
-<div class="bg-light">
+<div class="container">
     <div class="row">
-        <div class="col-sm-12  col-md-4"><img [src] = "categories.url"></div>
-        <div class="col-sm-12 col-md-4"></div>
-        <div class="col-sm-12 col-md-4"></div>
+        <div class="col-sm-6 bg-info text-light text-center" *ngFor = "let category of categories">{{ category.name }}</div>
+        <div class = "col-sm-6 bg-info text-light text-center">No category</div>
     </div>
 </div>
