Designed the header component, added some tags add styles to layout/homepage/main-component

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<h1 class = "bg-warning text-danger text-center heading">
+    <marquee>GG-Trainee4 Product Catalog</marquee>
+</h1>
