--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,50 @@
-<p>header works!</p>
+<div class="d-flex top-header bg-light">
+    <div class="p-2 mr-auto">
+        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 200px;">
+    </div>
+    <div class="p-2 mr-4">
+        <form class="form-inline mt-3 search-form" action="">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search">
+                <div class="input-group-append">
+                    <span class="input-group-text">All Category</span>
+                    <!-- <button class="btn btn-primary" type="button">OK</button> -->
+                    <button class="btn btn-success" type="submit">Search</button>
+                </div>
+            </div>       
+        </form>
+    </div>  
+    <div class="p-2 mt-3 mx-4 user-account">
+        <a href="#">
+            <i class="fa fa-user" style="font-size:29px"></i>
+            User
+        </a>
+    </div>  
+</div>
+<nav class="navbar navbar-expand-md sticky-top navbar-dark">  
+    <div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>    
+        <!-- Brand -->
+        <a class="navbar-brand" href="#" style="border-left: 2px;">PRODUCT CATALOGUE</a>
+        <div id="vl"></div>     
+    <!-- Links -->
+    <div class="collapse navbar-collapse collapsibleNavbar" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#" target="_blank">CATEGORIES</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">PRODUCTS</a>
+            </li>
+        </ul>
+    </div>        
+</nav>
+
+
+
+
+
+
