--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<app-main-layout></app-main-layout>
-<div class="container-fluid">
-    <app-footer></app-footer>
+
+<div class="container-fluid app-template">
+    <header>
+        <app-header></app-header>
+    </header>
+    <section>
+        <app-main-layout></app-main-layout>
+    </section>
+    <footer>
+        <app-footer></app-footer>
+    </footer>    
 </div>
