--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,6 +1,6 @@
-/* .full {
+body {
     width: 100%;
-} */
+}
 
 .footer {
 	height: auto;
@@ -10,7 +10,7 @@
   color:#fff;
 	border-bottom: 1px solid #CCCCCC;
 	border-top: 1px solid #DDDDDD;
-    background: #00003E;
+    background: #213239;
     /* background: -webkit-linear-gradient(to right, #31BDE6, #00003E);
     background: linear-gradient(to right, #31BDE6, #00003E); */
 }
@@ -57,7 +57,10 @@
 	padding: 0;
 	width: 100%;
 	color: #fff;
-    margin-top:10px;
+	margin-top:10px;
+	background: #0f6794;
+	background: linear-gradient(#1690c6, #0f6794);
+	
 }
 .subscribe-btn {
 	overflow: hidden;
@@ -89,7 +92,7 @@
 }
 .social li:hover {
 	border: 2px solid #2c3e50;
-	background: #2c3e50;
+	background: #4c6c8b;
 }
 .social li a i {
 	font-size: 16px;
@@ -97,18 +100,14 @@
 	color: #EDEFF1 !important;
 }
 .footer-bottom {
-    background:#00003E;
+    background:#213239;
     /* background:#40E0D0; */
     /* background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); */
     /* background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); */
 	border-top: 1px solid #DDDDDD;
-	padding-top: 20px;
-	padding-bottom: 40px;
+	padding-top: 10px;
+	padding-bottom: 10px;
     color:#fff;
 }
-.footer-bottom p.pull-left {
-	padding-top: 6px;
-}
-.payments {
-	font-size: 1.5em;
-}
+
+
