--- a/src/app/layout/home-page/main-layout.component.html
+++ b/src/app/layout/home-page/main-layout.component.html
@@ -1,4 +1,5 @@
 <div class="bg-light">
+    <h1 class="text-center">Main-Layout/Home Component</h1>
     <div class="row">
         <div class="col-sm-12  col-md-4"><img [src] = "categories.url"></div>
         <div class="col-sm-12 col-md-4"></div>
