added routing to the Navigation Bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <app-header></app-header>
     </header>
     <section>
-        <app-main-layout></app-main-layout>
+        <router-outlet></router-outlet>
     </section>
     <footer>
         <app-footer></app-footer>
