--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -41,13 +41,22 @@
     <div class="collapse navbar-collapse collapsibleNavbar" id="collapsibleNavbar">
         <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">HOME</a>
+                    <a class="nav-link" 
+                        [routerLink]="['/']"
+                        routerLinkActive = "active">HOME
+                    </a>
                 </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">CATEGORIES</a>
+                <a class="nav-link"
+                    [routerLink]="['/category']"
+                    routerLinkActive = "active">CATEGORIES
+                </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">PRODUCTS</a>
+                <a class="nav-link"
+                [routerLink]="['/products']"
+                routerLinkActive = "active">PRODUCTS
+            </a>
             </li>
         </ul>
     </div>        
