--- a/src/app/layout/home-page/main-layout.component.html
+++ b/src/app/layout/home-page/main-layout.component.html
@@ -1,9 +1,9 @@
 <div class="bg-light">
     <div class = "main-content">
         <div class="all-category">
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-6 bg-info text-light text-center" *ngFor = "let category of categories">{{ category.name }}</div>
                 <div class = "col-sm-6 bg-info text-light text-center">No category</div>
-            </div>
+            </div> -->
         </div>
 </div>
