since search wiil depend on component, added a search component

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,28 +1,7 @@
-<!-- the to header to diplay logo and search -->
-<div class="d-flex top-header bg-light">
-    <div class="p-2 mr-auto">
-        <img src="/assets/images/cropped-gg.png" alt="GG-logo" style="width: 200px;">
-    </div>
-    <div class="p-2 mr-4">
-        <form class="form-inline mt-3 search-form" action="">
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
-                <div class="input-group-append">
-                    <span class="input-group-text">All Category</span>
-                    <!-- <button class="btn btn-primary" type="button">OK</button> -->
-                    <button class="btn btn-success" type="submit">Search</button>
-                </div>
-            </div>       
-        </form>
-    </div>  
-    <div class="p-2 mt-3 mx-4 user-account">
-        <a href="#">
-            <i class="fa fa-user" style="font-size:29px"></i>
-            User
-        </a>
-    </div>  
+<!-- implimenting search -->
+<div>
+    <app-search></app-search>
 </div>
-<!-- End of Top Header -->
 
 <!-- Navigation bar -->
 <nav class="navbar navbar-expand-md sticky-top navbar-dark">  
