--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,1 +1,24 @@
-<p>product-list works!</p>
+<h5 class = "text-capitalize">our complete product list</h5>
+<!-- displays product list in a tabular manner -->
+<div>
+    <table>
+        <th>
+            <tr>
+                <td>Name</td>
+                <td>Category</td>
+                <td>Quantity</td>
+                <td>Price</td>
+                <td>Thumbnail</td>
+            </tr>
+        </th>
+        <tbody>
+            <tr>
+                <td></td>
+                <td></td>
+                <td>Quantity here</td>
+                <td>Price here</td>
+                <td>thumbnail here</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
