--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-main-layout></app-main-layout>
+<router-outlet></router-outlet>
 <div class="container-fluid">
     <app-footer></app-footer>
 </div>
