--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="footer" id="footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
                     <h3> Services </h3>
