Designed product-list component Closes #13

--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -1,23 +1,24 @@
-<h5 class = "text-capitalize">our complete product list</h5>
+
 <!-- displays product list in a tabular manner -->
-<div>
-    <table>
-        <th>
-            <tr>
-                <td>Name</td>
-                <td>Category</td>
-                <td>Quantity</td>
-                <td>Price</td>
-                <td>Thumbnail</td>
-            </tr>
-        </th>
-        <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td>Quantity here</td>
-                <td>Price here</td>
+<div class = "container-fluid bg-light">
+    <marquee>
+        <h4 class = "text-capitalize productlist-message bg-light">our complete list of products</h4>
+    </marquee>
+    <table class = "table bg-light">
+        <thead>
+                <th>Thumbnail</th>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Quantity</th>
+                <th>Price/FCFA</th>
+        </thead>
+        <tbody class = "text-primary">
+            <tr *ngFor = "let product of products">
                 <td>thumbnail here</td>
+                <td>{{product.name}}</td>
+                <td>{{product.category.name}}</td>
+                <td>{{product.quantity}}</td>
+                <td>{{product.price}}</td> 
             </tr>
         </tbody>
     </table>
