--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -4,6 +4,7 @@
     <marquee>
         <h4 class = "text-capitalize productlist-message bg-light">our complete list of products</h4>
     </marquee>
+    
     <table class = "table bg-light">
         <thead>
                 <th>Thumbnail</th>
@@ -11,14 +12,23 @@
                 <th>Category</th>
                 <th>Quantity</th>
                 <th>Price/FCFA</th>
+                <th><a routerLink = "/add-product" class="btn btn-primary">Add Product</a></th>
         </thead>
         <tbody class = "text-primary">
             <tr *ngFor = "let product of products">
-                <td>thumbnail here</td>
+                <td><a (click) = "viewProductDetails($event)">thumbnail here</a></td>
                 <td>{{product.name}}</td>
                 <td>{{product.category.name}}</td>
                 <td>{{product.quantity}}</td>
                 <td>{{product.price}}</td> 
+                <td>
+                    <button class = "text-danger">
+                        <i class = "fa fa-minus" data-toggle = "tooltip" title="delete product"></i>
+                    </button>
+                    <button class = "text-success ml-5">
+                        <i class = "fa fa-edit" data-toggle="tooltip" title="edit product"></i>
+                    </button>
+                </td>
             </tr>
         </tbody>
     </table>
