--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -22,12 +22,13 @@
                 <li class="nav-item">
                     <a class="nav-link" 
                         [routerLink]="['/']"
-                        routerLinkActive = "active">HOME
+                        routerLinkActive = "active">
+                        <i class="fa fa-home" style="font-size: 25px"></i>HOME
                     </a>
                 </li>
             <li class="nav-item">
                 <a class="nav-link"
-                    [routerLink]="['/category']"
+                    [routerLink]="['/category/category-list']"
                     routerLinkActive = "active">CATEGORIES
                 </a>
             </li>
