--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,12 +1,20 @@
-.app-template{
+
+
+/* .app-template{
     width: 100%;
     height: 100%;
 }
 header{
+    height: 10%;
     
-}
+} */
 
-section{
+/* section{
+    height: 80%;
     margin-bottom:10px ;
     
 }
+
+footer{
+    height: 10%;
+} */
