Added fucntionality to create new Category closes issue #11

--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -16,7 +16,7 @@
                     <p class="card-text">{{singleImage.id}}</p>
                     <a class="btn btn-primary stretched-link rounded-0"
                         id="view-catDetail-button"
-                        [routerLink]="['/category', category.id, category.name]"
+                        [routerLink]="['/category', category.id]"
                         >
                         <i class="fa fa-eye mx-1" style="font-size:20px"></i>Details
                     </a>
