--- a/src/app/category/category-list/category-detail/category-detail.component.html
+++ b/src/app/category/category-list/category-detail/category-detail.component.html
@@ -29,7 +29,8 @@
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item m-2">
-                    <a class="nav-link active" data-toggle="tab" href="#category-detail" 
+                    <a class="nav-link active" data-toggle="tab" 
+                        href="#category-detail" 
                         style="background: black; color: whitesmoke;">
                         Details
                     </a>
@@ -54,13 +55,13 @@
             <!-- Tab panes -->
             <div class="tab-content">
                 <div id="category-detail" class="container tab-pane active"><br>
-                    <h3 class="m-3">{{category.name}}</h3>
-                    <input type="hidden" value="{{category.id}}" #categoryId>
-                    <h4>Some Description</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <h6 class="center"><small>Category: </small> 
+                        {{ category.name }}</h6>
+                    <p><small>Description: </small>
+                        {{ category.description }}
+                    </p>
                 </div>
                 <div id="category-edit-nav" class="container tab-pane fade"><br>
-                    hello
                     <router-outlet></router-outlet>
                 </div>
             </div>            
