--- a/src/app/products/product-list/product-list.component.css
+++ b/src/app/products/product-list/product-list.component.css
@@ -9,3 +9,16 @@
     margin-top: 1rem;
     font-size: 2rem;
 }
+
+/* products image */
+#product-Thumbnail{
+    width:10rem;
+    height:10rem;
+}
+/* styles the product content */
+.product-Content{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.5rem;
+    color: darkblue;
+    margin:0 auto;
+}
