Added functionality to edit and update category

--- a/src/app/category/category-list/category-detail/category-detail.component.html
+++ b/src/app/category/category-list/category-detail/category-detail.component.html
@@ -29,7 +29,8 @@
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
                 <li class="nav-item m-2">
-                    <a class="nav-link active" data-toggle="tab" 
+                    <a class="nav-link active"
+                        data-toggle="tab"
                         href="#category-detail" 
                         style="background: black; color: whitesmoke;">
                         Details
@@ -37,9 +38,9 @@
                 </li>
                 <li class="nav-item my-2">
                     <a class="nav-link" 
+                        *ngIf="category"
                         data-toggle="tab"
-                        href="#category-edit-nav" 
-                        (click)="onEditCategory()" 
+                        href="#category-edit-nav"                        
                         style="background: black; color: whitesmoke; cursor: pointer;">
                         <i class="fa fa-edit" style="font-size:20px; color: whitesmoke;"></i>Edit
                     </a>
@@ -51,18 +52,20 @@
                     </a>
                 </li>
             </ul>
-        
+            <!-- [routerLink]="['/category', category.id, 'edit']"  -->
             <!-- Tab panes -->
             <div class="tab-content">
-                <div id="category-detail" class="container tab-pane active"><br>
+                <div id="category-detail" 
+                    class="container tab-pane active"
+                    *ngIf="category"><br>
                     <h6 class="center"><small>Category: </small> 
-                        {{ category.name }}</h6>
+                        {{ category.name}}</h6>
                     <p><small>Description: </small>
                         {{ category.description }}
                     </p>
                 </div>
                 <div id="category-edit-nav" class="container tab-pane fade"><br>
-                    <router-outlet></router-outlet>
+                    <app-category-edit></app-category-edit>
                 </div>
             </div>            
         </div>
