--- a/src/app/category/category-list/category-edit/category-edit.component.html
+++ b/src/app/category/category-list/category-edit/category-edit.component.html
@@ -51,7 +51,7 @@
                     </div> -->
                 </div>
                 <button type="submit" 
-                        class="btn btn-primary"
+                        class="btn btn-primary shadow m-1 rounded-0"
                         *ngIf="categoryName.valid && description.valid; else saveMessage">
                         Update
                 </button>
