--- a/src/app/category/category-list/category-delete/category-delete.component.html
+++ b/src/app/category/category-list/category-delete/category-delete.component.html
@@ -1,1 +1,37 @@
-<p>category-delete works!</p>
+<div class="alert alert-light alert-dismissible fade show" 
+    id="category-delete-info"
+    *ngIf="showInfo">
+     All Products with this category will be deleted
+</div>
+<div class="alert alert-success alert-dismissible fade show" 
+    id="category-delete-info"
+    *ngIf="successMessage !== ''">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+     {{successMessage}}
+</div>
+
+
+
+
+<div class="alert alert-danger alert-dismissible fade show"
+    *ngIf="!removeWarning">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+     <strong> Are you sure you want to delete this category?</strong>
+     <div class="m-3">
+         <button type="button" 
+                class="btn btn-danger shadow rounded-0 mr-3"
+                (click)="onClickYes()">Yes
+        </button>
+         <button type="button" 
+                class="btn btn-secondary shadow rounded-0"
+                (click)="onClickNo()">No
+        </button>
+     </div>
+     <div class="progress mt-4"
+            *ngIf="showProgress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger rounded-0" 
+            style="width:60%">
+            deleting...
+        </div>
+    </div>
+</div>
