--- a/src/app/category/category-main-page/category-main-page.component.html
+++ b/src/app/category/category-main-page/category-main-page.component.html
@@ -57,6 +57,7 @@
       
 
     <main>
+        <!-- <router-outlet [catProducts]="catProducts"></router-outlet> -->
         <router-outlet></router-outlet>
     </main>
 
