--- a/src/app/category/category-list/category-delete/category-delete.component.html
+++ b/src/app/category/category-list/category-delete/category-delete.component.html
@@ -9,12 +9,15 @@
     <button type="button" class="close" data-dismiss="alert">&times;</button>
      {{successMessage}}
 </div>
-
-
-
+<div class="alert alert-warning alert-dismissible fade show" 
+    id="category-delete-info"
+    *ngIf="delError">
+     <p>{{delError.error.error}} &nbsp; {{delError.error.status}}</p>
+     <p>{{delError.error.message}}</p>
+</div>
 
 <div class="alert alert-danger alert-dismissible fade show"
-    *ngIf="!removeWarning">
+    *ngIf="!removeWarning && !delError">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
      <strong> Are you sure you want to delete this category?</strong>
      <div class="m-3">
