--- a/src/app/category/category-main-page/category-main-page.component.css
+++ b/src/app/category/category-main-page/category-main-page.component.css
@@ -2,3 +2,9 @@
     max-height: 350px; 
     min-height: 200px;
  }
+
+ #addCategoryBtn {
+    color: whitesmoke;
+     background: black;
+     background: linear-gradient( #213239, rgb(177, 172, 172))
+ }
