--- a/src/app/category/category-list/category-list.component.css
+++ b/src/app/category/category-list/category-list.component.css
@@ -9,3 +9,13 @@
 .category-card-section{
 
 }
+
+#view-catDetail-button{
+	height: 40px;
+	margin-left: 25%;
+	width: 50%;
+	
+	color: #fff;
+	background: #0f6794;
+	background: linear-gradient(#1690c6, #0f6794);
+}
