--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -1,35 +1,38 @@
 <div class="container-fluid">
-    <!-- End of Carousel -->
-    
-    <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
-        <h6>Opps an Error Occured</h6>
-        <p>status: {{getCatError.status}}</p>
-        <p *ngIf="getCatError.status === 0">
-            <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
-        </p>
-        <p>message:  <br>
-            {{getCatError.message}}            
-        </p>
-        <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
-    </div>
-    
+    <!-- <div #loadMessage>Hello</div> -->
+    <!-- display loading Message  -->
     <div class="form-control text-center mx-auto " 
         style="border: none;"
         *ngIf="!fetchingData && !getCatError">
-        <div><small>Loading...</small></div>
+        <div>
+            <small>Loading...</small>
+        </div>
         <br>
         <div class="spinner-grow text-danger"></div>
         <div class="spinner-grow text-secondary"></div>
         <div class="spinner-grow text-dark"></div>
         <div class="spinner-grow text-info"></div>
     </div>
+
+<!-- display error Message -->
+    <div class="alert alert-danger alert-dismissible" *ngIf="!fetchingData && getCatError">
+            <h6>Opps an Error Occured</h6>
+            <p>status: {{getCatError.status}}</p>
+            <p *ngIf="getCatError.status === 0">
+                <strong>Server Cannot be reached at this time. Please Check your internet connection.</strong>
+            </p>
+            <p>message:  <br>
+                {{getCatError.message}}            
+            </p>
+            <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
+        </div>
     
     <!-- Displaying Categories -->
     <div class="row category-card-section" *ngIf="categories.length >= 1">
-        <div class="card-deck">
-            <div class="card-columns">
-                <div class="card bg-light" 
-                    style="width:200px"
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="card-columns" style="margin: 0;" >
+                    <div class="card my-3" 
+                    style="width:400px; "
                     *ngFor="let category of categories; let i=index">    
                     <div class="card-body">
                             <div>
@@ -37,12 +40,12 @@
                                 src="https://cdn.pixabay.com/photo/2014/08/05/10/30/iphone-410324_1280.jpg" 
                                 alt="Card image">
                             </div>
-                        <p class="card-title mt-3 category-name">{{category.name}}</p>
+                        <p class="card-title mt-3 category-name text-center "><strong>{{category.name}}</strong></p>
                         <a class="btn btn-primary stretched-link rounded-0"
                             id="view-catDetail-button"
                             [routerLink]="['/category', category.id]"
                             >
-                            <i class="fa fa-eye" style="font-size:20px"></i>Details
+                            <i class="fa fa-eye mr-2" style="font-size:20px"></i>Details
                         </a>
                     </div>
                 </div>
