--- a/src/app/layout/header/search/search.component.html
+++ b/src/app/layout/header/search/search.component.html
@@ -8,7 +8,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search">
                 <div class="input-group-append">
-                    <span class="input-group-text">All Component</span>
+                    <span class="input-group-text">{{componentName}}</span>
                     <!-- <button class="btn btn-primary" type="button">OK</button> -->
                     <button class="btn btn-success" type="submit">Search</button>
                 </div>
