--- a/src/app/category/category-main-page/category-main-page.component.css
+++ b/src/app/category/category-main-page/category-main-page.component.css
@@ -8,3 +8,9 @@
      background: black;
      background: linear-gradient( #213239, rgb(177, 172, 172))
  }
+
+ #carousel-image{
+     width: 70%;
+     margin-left: 15%;
+     margin-right: 15%;
+ }
