--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,7 @@
 <!-- implimenting search -->
 <div>
-    <app-search></app-search>
+    <app-search
+        [search]="searchName"></app-search>
 </div>
 
 <!-- Navigation bar -->
@@ -29,7 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link"
                     [routerLink]="['/category/category-list']"
-                    routerLinkActive = "active">CATEGORIES
+                    routerLinkActive = "active"
+                    >CATEGORIES
+                    
                 </a>
             </li>
             <li class="nav-item">
