--- a/src/app/category/category-list/category-edit/category-edit.component.html
+++ b/src/app/category/category-list/category-edit/category-edit.component.html
@@ -63,7 +63,7 @@
             <div class="alert alert-danger alert-dismissible" *ngIf="putCatError">
                 <button type="button" class="close" data-dismiss="alert">x</button>
                 <h2>Opps an Error Occured</h2>
-                <p>{{ postError.status + ' ' + postError.statusText }}</p>
+                <p>{{ putCatError.status + ' ' + putCatError.statusText }}</p>
                 <button class="btn btn-danger mt-2" (click)="onHandleError()">Okay</button>
             </div>
         </div>
